--- a/map.html
+++ b/map.html
@@ -1,5 +1,3 @@
-<h1>Hello, world!</h1>
-<h3>Claire Maldarelli</h3>
 <!DOCTYPE html>
 <html>
 <head>
@@ -30,9 +28,64 @@
     }
 </style>
 <div id='map'></div>
-<script type="text/javascript" src="States_data.js"></script>
+<script type="text/javascript" src="http://leafletjs.com/examples/us-states.js"></script>
 <script type='text/javascript'>
     // Based on the Leaflet example from http://leafletjs.com/examples/choropleth.html
+    var childCare = 
+[{"state":"Oregon","child":18.6},
+{"state":"New York","child":16.5},
+{"state":"Minnesota","child":15.5},
+{"state":"Massachusetts","child":15.1},
+{"state":"Colorado","child":15},
+{"state":"California","child":14.8},
+{"state":"Illinois","child":14.8},
+{"state":"Hawaii","child":14.4},
+{"state":"Washington","child":14.3},
+{"state":"Kansas","child":13.7},
+{"state":"Nevada","child":13.4},
+{"state":"Michigan","child":13},
+{"state":"Rhode Island","child":12.9},
+{"state":"Vermont","child":12.6},
+{"state":"Maine","child":12.6},
+{"state":"Arizona","child":12.4},
+{"state":"Wisconsin","child":12.3},
+{"state":"Pennsylvania","child":12.2},
+{"state":"New Hampshire","child":12.2},
+{"state":"North Carolina","child":12.1},
+{"state":"Montana","child":12.1},
+{"state":"Connecticut","child":12},
+{"state":"West Virginia","child":11.9},
+{"state":"Florida","child":11.7},
+{"state":"Texas","child":11.7},
+{"state":"Maryland","child":11.7},
+{"state":"Iowa","child":11.6},
+{"state":"Wyoming","child":11.6},
+{"state":"New Mexico","child":11.3},
+{"state":"Alaska","child":11.3},
+{"state":"Oklahoma","child":11.1},
+{"state":"Idaho","child":11.1},
+{"state":"Utah","child":11.1},
+{"state":"Missouri","child":11},
+{"state":"Indiana","child":10.9},
+{"state":"Ohio","child":10.8},
+{"state":"Virginia","child":10.6},
+{"state":"Nebraska","child":10.1},
+{"state":"New Jersey","child":9.9},
+{"state":"North Dakota","child":9.9},
+{"state":"Delaware","child":9.8},
+{"state":"Georgia","child":9.6},
+{"state":"Arkansas","child":9.3},
+{"state":"South Carolina","child":8.8},
+{"state":"Kentucky","child":8.6},
+{"state":"Tennessee","child":8.5},
+{"state":"South Dakota","child":8.1},
+{"state":"Alabama","child":7.6},
+{"state":"Mississippi","child":7.4},
+{"state":"Louisiana","child":7}]
+
+var childCareDict = {};
+
+childCare.forEach( function(row) { childCareDict[row.state] = row.child });
 
     var map = L.mapbox.map('map', 'examples.map-vyofok3q').setView([37.8, -96], 4);
 
@@ -47,20 +100,25 @@
     }).addTo(map);
 
     function getStyle(feature) {
+        console.log(feature.properties.name);
         return {
             weight: 2,
             opacity: 0.1,
             color: 'black',
             fillOpacity: 0.7,
-            fillColor: getColor(feature.properties.density)
+            fillColor: getColor(childCareDict[feature.properties.name])
         };
     }
 
     // get color depending on population density value
     function getColor(d) {
-        return d == 0 ? '#ccc' :
-            d == 1  ? '#f0f' :
-
+        return d > 1000 ? '#8c2d04' :
+            d > 500  ? '#cc4c02' :
+            d > 200  ? '#ec7014' :
+            d > 100  ? '#fe9929' :
+            d > 50   ? '#fec44f' :
+            d > 20   ? '#fee391' :
+            d > 10   ? '#fff7bc' :
             '#ffffe5';
     }
 
@@ -79,7 +137,7 @@
 
         popup.setLatLng(e.latlng);
         popup.setContent('<h2>' + layer.feature.properties.name + '</h2>' +
-            layer.feature.properties.density + ' surrogates per state');
+            childCareDict[layer.feature.properties.name] + ' % of income');
 
         if (!popup._map) popup.openOn(map);
         window.clearTimeout(closeTooltip);
@@ -108,7 +166,7 @@
     }
 
     function getLegendHTML() {
-        var grades = [0, 1],
+        var grades = [0, 10, 20, 50, 100, 200, 500, 1000],
             labels = [],
             from, to;
 
@@ -121,7 +179,7 @@
                 from + (to ? '&ndash;' + to : '+'));
         }
 
-        return '<span>Surrogates per state</span><br>' + labels.join('<br>');
+        return '<span>People per square mile</span><br>' + labels.join('<br>');
     }
 </script>
 </body>
