--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
 <h1>Hello, world! </h1>
 <h1> Claire Maldarelli </h1>
+
+<h3>Useful links for Kevin and Amanda: </h3>
+
+<a href="http://clairemaldarelli.github.io/Data-Journalism-Home/map.html">Week 3 Map</a>
