--- a/index.html
+++ b/index.html
@@ -4,3 +4,6 @@
 <h3>Useful links for Kevin and Amanda: </h3>
 
 <a href="http://clairemaldarelli.github.io/Data-Journalism-Home/map.html">Week 3 Map</a>
+<br>
+<a href="pitches.html">My Pitches</a>
+
