--- a/index.html
+++ b/index.html
@@ -6,4 +6,6 @@
 <a href="http://clairemaldarelli.github.io/Data-Journalism-Home/map.html">Week 3 Map</a>
 <br>
 <a href="pitches.html">My Pitches</a>
+<br>
+<a href="final pitch.html">Final Pitch</a> 
 
