--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 <br>
 <a href="pitches.html">My Pitches</a>
 <br>
-<a href="final pitch.html">Final Pitch</a> 
+<a href="final pitch.html">Final Pitch</a>
+<br>
+<a href="The Censored Vaccine.html">Final Project</a>
+
 
