Final Project - Final Draft

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <a href="final pitch.html">Final Pitch</a>
 <br>
 <a href="The Censored Vaccine.html">Final Project</a>
+<br>
+<a href="The Censored Vaccine_Final.html">Final Project - Final Draft</a>
 
 
