--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <br>
 <a href="final pitch.html">Final Pitch</a>
 <br>
-<a href="The Censored Vaccine.html">Final Project</a>
-<br>
-<a href="The Censored Vaccine_Final.html">Final Project - Final Draft</a>
+<a href="The Censored Vaccine_Final.html">Final Project</a>
+
 
 
